--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,6 +9,8 @@ edition = "2018"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+rand="0.4.6"
+pairing_ce = "0.26.0"
 
 [build-dependencies]
 cc = "1.0"
